<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.haranghaon.peacenote.MainActivity$PlaceholderFragment">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/greetingDateTextView"
        android:layout_below="@+id/greetingHeadLayout"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:lineSpacingExtra="16sp"
                android:text="@string/confession_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <com.haranghaon.peacenote.common.CTextView
                android:id="@+id/main1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="16sp"
                android:paddingBottom="16sp"
                android:text="@string/confession_main1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <com.haranghaon.peacenote.common.CTextView
                android:id="@+id/main2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="16sp"
                android:paddingBottom="16sp"
                android:text="@string/confession_main2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <com.haranghaon.peacenote.common.CTextView
                android:id="@+id/main3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="16sp"
                android:paddingBottom="16sp"
                android:text="@string/confession_main3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <com.haranghaon.peacenote.common.CTextView
                android:id="@+id/sub1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="14sp"
                android:paddingBottom="14sp"
                android:text="@string/confession_sub1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="15sp" />

            <com.haranghaon.peacenote.common.CTextView
                android:id="@+id/sub2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="14sp"
                android:paddingBottom="14sp"
                android:text="@string/confession_sub2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="15sp" />

            <com.haranghaon.peacenote.common.CTextView
                android:id="@+id/sub3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="14sp"
                android:paddingBottom="14sp"
                android:text="@string/confession_sub3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="15sp" />

            <com.haranghaon.peacenote.common.CTextView
                android:id="@+id/sub4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="14sp"
                android:paddingBottom="14sp"
                android:text="@string/confession_sub4"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="15sp" />

            <com.haranghaon.peacenote.common.CTextView
                android:id="@+id/sub5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="14sp"
                android:paddingBottom="14sp"
                android:text="@string/confession_sub5"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="15sp" />

            <com.haranghaon.peacenote.common.CTextView
                android:id="@+id/end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="16sp"
                android:paddingBottom="16sp"
                android:text="@string/confession_end"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>