<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.haranghaon.peacenote.MainActivity$PlaceholderFragment" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/greetingHeadLayout"
        android:scrollbars="none"
        android:layout_above="@+id/greetingDateTextView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.haranghaon.peacenote.common.CTextView
                android:id="@+id/mainTextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="16sp"
                android:paddingBottom="16sp"
                android:text="@string/greeting_main1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <com.haranghaon.peacenote.common.CTextView
                android:id="@+id/mainTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="16sp"
                android:paddingBottom="16sp"
                android:text="@string/greeting_main2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <com.haranghaon.peacenote.common.CTextView
                android:id="@+id/mainTextView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="16sp"
                android:paddingBottom="16sp"
                android:text="@string/greeting_main3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/greetingNameTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/greeting_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="21sp"
        android:textStyle="bold" />

    <!--<TextView
        android:id="@+id/greetingTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/greeting_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="21sp"
        android:textStyle="bold" />-->

    <TextView
        android:id="@+id/greetingDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/greetingNameTextview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/greeting_date"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="21sp" />

    <LinearLayout
        android:id="@+id/greetingHeadLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scrollView1"
        android:layout_alignRight="@+id/scrollView1"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/jjt" />

        <com.haranghaon.peacenote.common.AutoResizeTextView
            android:id="@+id/greetingSubTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:lineSpacingExtra="15sp"
            android:maxLines="2"
            android:text="@string/greeting_main_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/darker_gray"
            android:textSize="100sp" />

    </LinearLayout>

</RelativeLayout>